--- a/assignment1/doc.tex
+++ b/assignment1/doc.tex
@@ -87,7 +87,7 @@
 
 \section{$\theta$ method}
 \begin{definition}[$\theta$ method]
-  $\theta$ method
+  $\theta$ method is
   \end{definition}
 \section{Maximum Principle Theorem}
 
